Baking specular does not use smooth normal for view direction #91590

Closed
opened 2021-09-22 07:44:01 +02:00 by Aditiya Afrizal · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GT 630M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35
CPU: intel i3 2328m Intel hd3000

This scenario using CPU not using GPU because my GPU its not supported.

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-21 22:38, hash: 4d881d9dad
Worked: 2.83.16

Short description of error
blocky baking result with curved mesh like a cylinder

Exact steps for others to reproduce the error

  1. open attached blend file
  2. bake it
  3. you gonna see the side part in baked UV looks blocky

blend file : https://pasteall.org/blend/7705d8769a25432c97e66b91f3c8a294

preview image Untitled.jpg

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GT 630M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 CPU: intel i3 2328m Intel hd3000 This scenario using CPU not using GPU because my GPU its not supported. **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-21 22:38, hash: `4d881d9dad` Worked: 2.83.16 **Short description of error** blocky baking result with curved mesh like a cylinder **Exact steps for others to reproduce the error** 1. open attached blend file 2. bake it 3. you gonna see the side part in baked UV looks blocky blend file : https://pasteall.org/blend/7705d8769a25432c97e66b91f3c8a294 preview image ![Untitled.jpg](https://archive.blender.org/developer/F10538711/Untitled.jpg)

Added subscriber: @adfriz

Added subscriber: @adfriz
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Marking as confirmed as it is recognized as a bug in the Cycles-X bugs task. #91089 (Cycles X - Bugs)

Baking specular does not use smooth normal for view direction

Marking as confirmed as it is recognized as a bug in the Cycles-X bugs task. #91089 (Cycles X - Bugs) > Baking specular does not use smooth normal for view direction
Alaska changed title from Blocky bake result in curved mesh like a cylinder to Baking specular does not use smooth normal for view direction 2021-09-22 09:13:26 +02:00

This issue was referenced by blender/cycles@661d7ac523

This issue was referenced by blender/cycles@661d7ac5239597a5e34a025f0f313d0e44bec75e

This issue was referenced by 204b01a254

This issue was referenced by 204b01a254ac2445fea217e5211b2ed6aef631ca

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-09-22 16:09:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91590
No description provided.