Fix T91590: Cycles specular baking not using smooth normal